# lidar_appearance_calibration

./: CMakeLists.txt  README.md  lidar_appearance_calibration.kdev4  package.xml
cfg/: algorithmParameters.cfg
config/: calib_icp.yaml  calib_preprocess.yaml  calib_yellow_gt.yaml
data/example/top_front/: cfg.yaml  data_cfg.yaml  eps_opt.csv  merged_before.pcd  merged_ini.pcd  merged_opt.pcd  opt_report.yaml  ref_cfg.yaml  simulation_result.yaml
data/example/top_front/plane/: data_plane_1.pcd  data_plane_2.pcd  data_plane_3.pcd  data_planes.pcd  ref_plane_1.pcd  ref_plane_2.pcd  ref_plane_3.pcd  ref_planes.pcd
data/example/top_front/raw/: data_filter.pcd  ref_filter.pcd
include/: ColorMap.h  Kabsch.hpp  cal_icp.h  calib_pointcloud.h  mutil_cal_eval.h  plane_fitter.hpp  utils.h
include/common/: common.hpp  common_ros.hpp  math.hpp  publisher.hpp  time.hpp  transform.hpp
include/common/types/: feature.hpp  object.hpp  type.h
launch/: evaluation_plane_fitting.launch
result/: yellow_gt.yaml
rviz/: plane_extraction.rviz
src/: calib_evaluation.cpp  calib_evaluation_mse.cpp  calib_icp.cpp  calib_plane_extraction.cpp  calib_preprocess.cpp  simulation_data_generation.cpp  simulation_result.yaml
test/: cal_icp.cpp  calibration.cpp  multi_cal_eval.cpp
